@@ -52,7 +52,7 @@ table.filter .button{
 }
 
 table.filter .biginput{
-	font-size: 8px;
+	font-size: 9px;
 	height: 10px;
 	margin: 0px;
 }
